tutorials/claims-routing-istio/manifests/istio/route/istio-ingressgateway-patch.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START claims_routing_identity_platform_istio_manifests_istio_route_istio_ingressgateway_patch]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
spec:
  template:
    spec:
      containers:
      - name: istio-proxy
        volumeMounts:
        - mountPath: /opt/jwtparse
          name: jwtparse
      volumes:
      - name: jwtparse
        configMap:
          name: jwtparse-lua
# [END claims_routing_identity_platform_istio_manifests_istio_route_istio_ingressgateway_patch]
