tutorials/claims-routing-istio/manifests/istio/route/gateway.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START claims_routing_identity_platform_istio_manifests_istio_route_gateway]
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http2
      number: 80
      protocol: HTTP2
    hosts:
    - '*'
# [END claims_routing_identity_platform_istio_manifests_istio_route_gateway]
