tutorials/claims-routing-istio/manifests/istio/route/envoyfilter.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START claims_routing_identity_platform_istio_manifests_istio_route_envoyfilter]
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: jwtparse
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.http_connection_manager
            subFilter:
              name: envoy.router
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.lua
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.http.lua.v2.Lua
          inlineCode: |-
            -- Add source code files to package path
            package.path = package.path .. ";/opt/jwtparse/?.lua"
            -- JWT parse filter for gateway outbound requests
            require("jwtparse")
# [END claims_routing_identity_platform_istio_manifests_istio_route_envoyfilter]
