tutorials/claims-routing-istio/manifests/istio/route/virtualservice.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START claims_routing_identity_platform_istio_manifests_istio_route_virtualservice]
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-vs
spec:
  gateways:
  - ingressgateway
  hosts:
  - '*'
  http:
  - name: route-beta-app
    match:
    - uri:
        prefix: /beta
    route:
    - destination:
        host: app.beta.svc.cluster.local
  - name: route-beta-api
    match:
    - headers:
        x-app-version:
          exact: beta
    route:
    - destination:
        host: app.beta.svc.cluster.local
  - name: route-stable
    route:
    - destination:
        host: app.stable.svc.cluster.local
# [END claims_routing_identity_platform_istio_manifests_istio_route_virtualservice]
